feat: api docs for get record by id
